adding ddls